# uptime-api

./: .commitlintrc.yml  .dockerignore  .gitignore  .rustfmt.toml  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  Dockerfile  cliff.toml  renovate.json
.fleet/: settings.json
.github/: labels.yml
.github/workflows/: changelog.yml  ci.yml  release.yml  security.yml  sync-labels.yml
crates/release/: Cargo.toml
crates/release/src/: main.rs
src/: main.rs
src/utils/: healthcheck.rs
