[package]
name = "uptime-api"
description = "Minimal template for new binary rust projects."
homepage = "https://naeko.moe/"
license-file = "LICENSE"
repository = "https://github.com/naeko-team/naeko-rust"
version = "0.1.0"
edition = "2021"
authors = [
    "sawa-ko <56084970+sawa-ko@users.noreply.github.com>"
]

[workspace]
members = ["crates/release"]

[package.metadata.bin]
rusty-hook = { version = "0.11.2" }
commitlint-rs = { version = "0.1.11", bins = ["commitlint"] }
git-cliff = { version = "2.4.0" }

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["add-extension", "trace"] }